fix(Results): 사람 수에 맞게 results 변형